# nativepack

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  License  build.ninja  readme.md  workspace.code-workspace
.github/: contributing.md
__tests__/: config_test.cc  readme.md
input/: index.html  nativepack.json  project.yml
scripts/: clean.sh  format.sh  init_project.sh  setup.sh
src/: cli.h  config.cpp  config.h  configuration.toml  core.h  logger.h  main.cpp  readme.md
src/cdn/: core.css  core.js  info.md
src/lexer/: lexer.h
